--- a/templates/Landing.html
+++ b/templates/Landing.html
@@ -34,7 +34,7 @@
 		<a href="tel:+1234567890" class="text-xl font-bold text-blue-500 hover:underline">Call us: +1 (234) 567-890</a>
 	  </div>
 	</section>
-<!-- 
+
 	  <script>
 		
 			function checkDelivery() {
@@ -57,7 +57,7 @@
 			// Commented out the checkDelivery() call to prevent it from executing immediately
 			// checkDelivery();
 		  
-	  </script> -->
+	  </script> 
 
   </body>
 </html>
