--- a/templates/navbarAdmin.html
+++ b/templates/navbarAdmin.html
@@ -1,11 +1,16 @@
-<nav class="bg-gray- text-gray-800 p-4">
-    <div class="container mx-auto flex justify-between items-center">
-      <a href="#" class="text-2xl font-bold">Eli Sweets</a>
-      <ul class="flex space-x-4">
-        <li><a href="#" class="hover:text-gray-300">Home</a></li>
-        <li><a href="#" class="hover:text-gray-300">Orders</a></li>
-        <li><a href="#contact" class="hover:text-gray-300">Products</a></li>
-          <li style='color: red'><a href="/logout" class="hover:text-gray-300">log Out</a></li>
-      </ul>
-    </div>
-  </nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container mx-auto">
+      <a class="navbar-brand text-2xl font-bold" href="#">Eli Sweets</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <ul class="navbar-nav ml-auto space-x-4">
+              <li class="nav-item"><a href="#" class="nav-link hover:text-gray-300">Home</a></li>
+              <li class="nav-item"><a href="#" class="nav-link hover:text-gray-300">Orders</a></li>
+              <li class="nav-item"><a href="/products" class="nav-link hover:text-gray-300">Products</a></li>
+              <li class="nav-item" style="color: red"><a href="/logout" class="nav-link hover:text-gray-300">Log Out</a></li>
+          </ul>
+      </div>
+  </div>
+</nav>
