--- a/templates/Products.html
+++ b/templates/Products.html
@@ -1,13 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <a href="/addProduct">Add Product</a>
-    <h1>Product list hoes here</h1>
+
+
+    <!DOCTYPE html>
+    <html lang="en">
+        {%include ('navbarAdmin.html')%}
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Tailwind CSS and Bootstrap 5 Template</title>
     
-</body>
-</html>
+        <!-- Bootstrap 5 CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+        <!-- Tailwind CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    </head>
+    <body>
+        
+    <a href="/addProduct">Add Product</a>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8">
+
+        <!-- make a loop to render all the products and if there is any show No Products To show -->
+        {% for product in products %}
+
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <img class="w-full h-60 object-cover mb-4 rounded-md" src="{{product['ProductImage']}}" alt="Product Image">
+            <h2 class="text-xl font-bold mb-2">{{product['ProductName']}}</h2>
+
+            <p class="text-gray-600 mb-2">
+                {% if product['ProductDescription'] == "" %}
+                    {{ product['ProductDescription'] }}
+                {% else %}
+                    No description available.
+                {% endif %}
+            </p>
+
+            <p class="text-green-600 font-bold">{{product['ProductPrice']}}</p>
+        </div>
+
+        {% endfor %}
+
+
+    </div>
+
+
+    
+    
+  
+    <!-- Bootstrap 5 JavaScript (optional) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    </body>
+    </html>
+    
+    
