--- a/templates/Landing.html
+++ b/templates/Landing.html
@@ -9,7 +9,8 @@
 	</style>
 	<title>Eli Sweets</title>
   </head>
-  <body onload="checkDelivery()" class="">
+  <!--<body onload="checkDelivery()" class=""> -->
+	<body>
 
 	<!-- Navigation -->
 	  
