--- a/templates/AddProduct.html
+++ b/templates/AddProduct.html
@@ -36,10 +36,10 @@
               </div>
 
               <div class="mb-3">
-                <label for="selectOption" class="form-label">Select an option:</label>
-                <select class="form-select" id="selectOption">
-                    <option value="active" selected class="text-success font-weight-bold">Active</option>
-                    <option value="draft" class="text-muted">Draft</option>
+                <label for="selectOption"  class="form-label">Select an option:</label>
+                <select class="form-select" name="OptionSelect" id="selectOption">
+                    <option value="Active" selected class="text-success font-weight-bold">Active</option>
+                    <option value="Draft" class="text-muted">Draft</option>
                 </select>
             </div>
 
