--- a/templates/navbarAdmin.html
+++ b/templates/navbarAdmin.html
@@ -6,8 +6,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <ul class="navbar-nav ml-auto space-x-4">
-              <li class="nav-item"><a href="#" class="nav-link hover:text-gray-300">Home</a></li>
-              <li class="nav-item"><a href="#" class="nav-link hover:text-gray-300">Orders</a></li>
+              <li class="nav-item"><a href="/dashboard" class="nav-link hover:text-gray-300">Home</a></li>
+              <!-- <li class="nav-item"><a href="/listOrder" class="nav-link hover:text-gray-300">Orders</a></li> -->
               <li class="nav-item"><a href="/products" class="nav-link hover:text-gray-300">Products</a></li>
               <li class="nav-item" style="color: red"><a href="/logout" class="nav-link hover:text-gray-300">Log Out</a></li>
           </ul>
