--- a/templates/LoginAdmin.html
+++ b/templates/LoginAdmin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	
   <head>
-	   {% include 'navbar.html' %}
+	   <!-- {% include 'navbar.html' %} -->
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
