--- a/templates/AddOrder.html
+++ b/templates/AddOrder.html
@@ -21,7 +21,7 @@
     <div class="container mx-auto mt-8">
         <div class="max-w-md mx-auto bg-white rounded-md overflow-hidden shadow-md">
             <div class="bg-gray-200 text-center py-4">
-                <h3 class="text-lg font-semibold text-gray-700">Order Form</h3>
+                <h3 class="text-lg font-semibold text-gray-700">Add Order</h3>
             </div>
             <div class="p-4">
 
